force-app/main/default/objects/BillingDetail__c/BillingDetail__c.object-meta.xml
<CustomObject>
    <label>請求明細</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>請求明細番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>