force-app/main/default/objects/BillingDetail__c/fields/AmountBilled__c.field-meta.xml
<CustomField>
    <fullName>AmountBilled__c</fullName>
    <label>請求額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>