force-app/main/default/objects/BillingDetail__c/fields/Billing__c.field-meta.xml
<CustomField>
    <fullName>Billing__c</fullName>
    <label>請求</label>
    <referenceTo>Billing__c</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>BillingDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>