force-app/main/default/objects/BillingDetail__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>割引</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>