force-app/main/default/objects/BillingDetail__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商品</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>請求明細</relationshipLabel>
    <relationshipName>ref_BillingDetails_ProductId</relationshipName>
    <type>Lookup</type>
</CustomField>