force-app/main/default/objects/BillingDetail__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>備考</label>
    <type>TextArea</type>
</CustomField>