force-app/main/default/objects/BillingDetail__c/fields/SortNo__c.field-meta.xml
<CustomField>
    <fullName>SortNo__c</fullName>
    <label>表示順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>