force-app/main/default/objects/BillingDetail__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>小計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>